--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1023,7 +1023,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   margin-bottom: 39px;
 }
 
@@ -1037,6 +1036,7 @@ body {
   display: block;
   padding: 0;
   margin: 0;
+  margin-top: 6px;
 }
 
 .select-list {
@@ -1073,12 +1073,12 @@ body {
 }
 
 .view-list {
+  width: 160px;
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   gap: 8px;
 }
 
@@ -1127,6 +1127,7 @@ body {
   padding: 0;
   margin: 0;
   gap: 18px 20px;
+  align-items: start;
 }
 
 .card-item {
@@ -1138,6 +1139,7 @@ body {
   border: 1px solid #e6e6e6;
   border-radius: 4px;
   box-sizing: border-box;
+  align-items: start;
 }
 
 .card-link {
@@ -1184,6 +1186,8 @@ body {
   line-height: 20px;
   border-radius: 4px;
   border: none;
+  padding: 3px 15px;
+  box-sizing: border-box;
 }
 
 .to-fav {
@@ -1240,6 +1244,8 @@ body {
   color: #333333;
   background-color: #f2f2f2;
   border-radius: 4px;
+  padding: 3px 15px;
+  box-sizing: border-box;
 }
 
 .pagination {
@@ -1254,8 +1260,10 @@ body {
 }
 
 .pagination-list {
+  width: 600px;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   gap: 8px;
   padding: 39px 0 61px 0;
   margin: 0;
